--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,10 @@
 DirectoryIndex login.php
+
+Options Indexes FollowSymLinks
+AllowOverride All
+Options -Indexes
+
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.php -f
+RewriteRule ^(.*)$ $1.php
